fix: better fix of NPE